--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
     "@react-navigation/stack": "^7.2.3",
+    "chroma-js": "^3.1.2",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.78.1",
