--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.78.1",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-image-picker": "^8.2.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
