--- a/package.json
+++ b/package.json
@@ -11,17 +11,30 @@
     "postinstall": "npx pod-install"
   },
   "dependencies": {
+    "@ethersproject/shims": "^5.8.0",
+    "@privy-io/expo": "^0.49.5",
+    "@privy-io/expo-native-extensions": "^0.0.4",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
     "@react-navigation/stack": "^7.2.3",
     "chroma-js": "^3.1.2",
+    "expo": "^52.0.42",
+    "expo-application": "~6.0.2",
+    "expo-constants": "~17.0.8",
+    "expo-crypto": "~14.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-modules-core": "^2.2.3",
+    "expo-secure-store": "~14.0.1",
+    "expo-web-browser": "~14.0.2",
+    "fast-text-encoding": "^1.0.6",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.78.1",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^8.2.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.17.1",
@@ -31,6 +44,7 @@
     "react-native-svg": "^15.11.2",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.12.5",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
